--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#000000</color>
     <color name="black2">#1C1C1C</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_46B74F">#46B74F</color>
     <color name="red">#EB4755</color>
     <color name="colorPrimary">#46B74F</color>
     <color name="colorButtonText">#303030</color>
